test/success/implicits/simple/main.sk
module Main {

implicit myImplicit: Int

fn foo() {
    assert(myImplicit == 42);
}

fn foo2() {
    assert(myImplicit == 43);
}

fn main() {
    let mut counter = 42;
    with myImplicit = counter {
        foo();
        counter = 43;
        foo2();
    }
}

}
