test/errors/implicit/immutable_handler_mutable_implicit/main.sk
module Main {

implicit mut myImplicit: Int

fn foo() {
    assert(myImplicit == 42);
    myImplicit = 43;
}

fn main() {
    let counter = 42;
    with myImplicit = counter {
        foo();
    }
}

}
